# douglas-crawler

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  SQL.md  Taskfile.yml  docker-compose.yml  mise.toml  prod.Dockerfile  pyproject.toml  scratch.ipynb
.github/workflows/: build-and-push.yaml  deploy.yaml
docs/: APPROACH.md  README.md  SQL.md
douglas/: __main__.py  api.py  db.py  settings.py
douglas/internal/: crawler.py  douglas_api.py  user_agent.py
douglas/models/: __init__.py  base.py  product.py
douglas/schemas/: __init__.py  base.py  douglas_api.py  paginated.py  product.py
infra/helm/: helmfile.yaml
infra/helm/douglas-crawler/: Chart.yaml  values.yaml
infra/helm/douglas-crawler/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml
infra/helm/douglas-crawler/templates/tests/: test-connection.yaml
infra/terraform/: .terraform.lock.hcl  backend.tf  main.tf  outputs.tf  providers.tf  variables.tf
migrations/: env.py  script.py.mako
migrations/versions/: 2024_11_18_1208-bd3c5d0ca4d4_init.down.sql  2024_11_18_1208-bd3c5d0ca4d4_init.py  2024_11_18_1208-bd3c5d0ca4d4_init.up.sql
scripts/: api.py  crawl.py
tests/: test_api.py  test_douglas_api.py  test_test.py
