[tool.poetry]
name = "douglas-crawler"
version = "0.1.0"
description = ""
authors = ["Kenneth V. Domingo <hello@kvd.studio>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
beautifulsoup4 = "^4.12.3"
httpx = { extras = ["brotli", "http2", "zstd"], version = "^0.27.2" }
fastapi = { extras = ["standard"], version = "^0.115.5" }
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"
python-ulid = "^3.0.0"
lxml = "^5.3.0"
loguru = "^0.7.2"
tqdm = "^4.67.0"
aiofile = "^3.9.0"
polars = "^1.14.0"
ua-generator = "^1.0.6"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.3"
ipython = "^8.29.0"
jupyter = "^1.1.1"
notebook = "^7.2.2"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B", "UP"]
ignore = ["E203", "E266", "E501", "E402"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["pydantic.validator"]
